tests/errors/embed_file_missing.milo
// @error: cannot open 'nonexistent.txt'
fn main(): i32 {
    let x = embed_file("nonexistent.txt")
    return 0
}
